Fix checkout notices overflowing the content area

--- a/css/checkout-layout-120-dev-5.css
+++ b/css/checkout-layout-120-dev-5.css
@@ -92,8 +92,8 @@ body.woocommerce-checkout.has-checkout-header .wfc-content {
 @media (min-width: 1000px) {
   body:not(.has-checkout-must-login-notice) .wfc-checkout-header,
   body:not(.has-checkout-must-login-notice) .wfc-checkout-notices,
+  body:not(.has-checkout-must-login-notice).woocommerce-checkout .woocommerce-NoticeGroup,
   body:not(.has-checkout-must-login-notice) .wfc-progress-bar,
-  body:not(.has-checkout-must-login-notice) .woocommerce-NoticeGroup-checkout,
   body:not(.has-checkout-must-login-notice) .wfc-inside {
     float: left;
     width: 60%;
